#44024 fixed Misalignments in general and Port ratings comments

--- a/ShiptechV2/assets/theme/defaultweb/design-system/shiptech/shiptech.scss
+++ b/ShiptechV2/assets/theme/defaultweb/design-system/shiptech/shiptech.scss
@@ -3468,8 +3468,11 @@
     }
 
     .l-h-46 {
-        line-height: 46px;
+        line-height: 16px;
         vertical-align: middle;
+        max-width: 472px;
+        padding-top: 10px !important;
+        padding-right: 10px !important;
     }
 
     .align-center {
